# Multi-Source-Candidate-Data-Transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
Candidate_Transformer/: __init__.py  cli.py  confidence.py  config.py  merge.py  models.py  pipeline.py  projection.py  validation.py
Candidate_Transformer/Normalise/: __init__.py  dates.py  location.py  phones.py  skills.py
Candidate_Transformer/Sources/: __init__.py  ats_json.py  base.py  github.py  recruiter_csv.py  resume.py
Docs/: DESIGN.md
Sample/Configs/: custom.json
Sample/Inputs/: ats.json  github_janedoe.json  recruiter.csv  resume.txt
Sample/outputs/: custom.json
tests/: conftest.py  test_gold.py  test_normalize.py  test_pipeline.py  test_projection.py
tests/gold/: default_profiles.json
