[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer: messy inputs -> one canonical, provenance-tracked profile."
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
# Recommended runtime extras (code degrades gracefully without them).
full = ["phonenumbers>=8.13", "python-dateutil>=2.8", "pdfplumber>=0.11", "python-docx>=1.1", "requests>=2.31"]
test = ["pytest>=8.0"]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:main"

[tool.setuptools.packages.find]
include = ["candidate_transformer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# uv reads the standard [project] table above, so `uv sync` / `uv run` work with
# no extra config. This dev group is installed by default on `uv sync`.
[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
# Keep resolution reproducible for the take-home review.
package = true
